# OpenXM

./: LICENSE  README.md  install.txt
doc/oxlib/: Makefile  Makefile.in  README  README.md  configure  configure.in  hhh.h  oxasir.h  test.c  test0.c  test1-tcp-rev.c  test1-tcp.c  test1.c  test2.c  test3.c
src/asir-contrib/: Makefile  Makefile.in  configure  configure.in  guideline-ja.txt  guideline.txt  make-configure  todo.txt
src/asir-contrib/outer/: Makefile  curl-os_muldiff.sh
src/asir-contrib/plugin/: Makefile
src/asir-contrib/testing/: Makefile  readme-ja.txt  rewriting.rr  taka_series.rr  test1-tr.rr  tr-ja.oxt  tr.rr
src/asir-contrib/win/: asirgui-cd-me.bat  asirgui-cd.bat  asirgui.bat  asirgui2.bat
src/asir-doc/: Makefile  Makefile.in  README  asir.1  configure  configure.in  extract_func.c  extract_man.c  internal.texi  make-configure  man-sample.texi  man.texi  texi2html  texi2html.perl  texinfo-js.tex  texinfo.ini  texinfo.tex  txi-ja.tex
src/asir-doc/exp/: exp-ja.texi
src/asir-doc/html_tools/: conv_index.c  conv_toc.c  gen_hh.c  gen_hh_new.c
src/asir-doc/int-parts/: datatype.texi  gc.texi  inter.texi  intro.texi  macro.texi  operation.texi  parser.texi  port.texi
src/asir-doc/papers/: db15.ps  isisrr.sty  numtr.bbl  numtr.tex  parsol.ps  psfig.sty  qe2.eps  risa-asir.tex
src/asir-doc/parts/: algnum.texi  appendix.texi  asir.texi  builtin.texi  debug.texi  ff.texi  groebner.texi  intro.texi  process.texi  risa.texi  type.texi
src/asir-doc/texinfo/: txi-ja.tex
src/k097/: @EXPERIMENTAL  Makefile  Makefile.in  README  cleanForDist  configure  configure.in  d.c  d.h  dic.c  dm.c  factor-b.sm1  help.k  hol.k  incmac.sm1  install.jp  junk.k  k2.c  ki.c  ki.h  make-configure  makeDist  makeall  man.k  msg1.c  new.sed  object.kk  ox_k0.c  ox_k0.h  simple.tab.c  simple.tab.h  simple.y  slib.k  slib.sm1  sm1sm.c  startup.k  todo.txt
src/k097/Doc/: Makefile  changelog-ja.tex  complex.texi  genhelp.k  intro.jp.txt  k0-man.texi  prog1.txt  standard-0.texi  standard-1.texi  standard-suppl.texi
src/k097/Replace/: Makefile  colide.c  colide2.c  sym  sym.h  test.c
src/k097/Stable/: Makefile  mk.c  mk0.sm1  mkdata.c  reserved.txt  sm1symbol.h  stable
src/k097/debug/: a24.k  ahg.k  ahg2.k  ahg2.k.sm1  asir0.k  asir1.ccc  asir1.ccc.old1  buggy.k  buggy2.k  complex0.kk  complex01.kk  db.k  fault1.c  graph.kk  indexed.k  int.k  kobj2.kk  kobj2.sm1  loadpackage.kk  mklib  over.sm1  pgcd.k  psfor.k  return.k  test.k  tests.k  toric0.k  toric0.txt  trash.k  trip1.k  trip2.k  trip3.k  tune1.k  word.kk
src/k097/lib/: all.k  k0-mode.el  mklib  printSVector.ccc  printSVector.modified.sm1  printSVector.sm1  setvariables.ccc  setvariables.sm1  tostr.ccc  tostr.sm1
src/k097/try/: Makefile  t0.cc
src/kan96xx/Kan/: Makefile  Makefile.in  ar-decomp  ar-decomp2  ar0  backup  bugs.txt  cat0  check.c  clean0.sed  clean0.sed.org1  coeff.c  configure  configure.in  datatype.h  debug.sm1  dr.sm1  dr.sm1.old1  ecart.c  ext.c  extern.h  extern2.h  gb.c  gbGM.c  global.c  gradedset.c  gradedset.h  hilbert.c  kanExport0.c  kanExport1.c  kanlib.c  kclass.c  kclass.h  list.c  lookup.h  makeconf.c  matrix.c  matrix.h  mklookup.c  mm.c  (+41 more)
src/kan96xx/gmp-2.0.2-ssh-2/: INSTALL  Makefile.am  Makefile.in  README  acconfig.h  config.h.in  configure  configure.in  gmp-impl.h  gmp.h  gmp.info  gmp.info-1  gmp.info-2  gmp.info-3  longlong.h  make.bat  mp_bpl.c  random.c  urandom.h  version.c
src/kan96xx/plugin/: Makefile  Makefile.in  asir.h  asir.hh  asirconv.c  cmo-gmp.c  cmo.c  cmo.h.org  cmo.hh  cmo.sm1  cmo.txt  cmo0.h  cmotag.h  cmotag.htmp  cmotagToName.c  configure  configure.in  debug.sm1  file2.c  file2.h  file2.hh  file2.sm1  junk.c  kancmo.h  kstring.c  kstring.h  kstring.hh  kstring.sm1  make.txt  mathcap.h  mysig.c  mysig.h  mytcpio.c  oxCMO0.h  oxFunctionId.h  oxKan0.h  oxMessageTag.h  oxcgi.c  oxcgi.h  (+23 more)
src/kxx/: Makefile  Makefile.conf  Makefile.in  README.jp  README.jp.old1  cleanForDist  configure  configure.in  init-openxm.scm  issac2000.tex  make-configure  makeBinary  makeDist  nullstackmachine.c  openintro.tex  openxxx.tex  ox.help  ox.help.jp  ox100start.c  ox_texmacs.c  oxd-thread.c  oxd.c  oxlog.c  oxmain.c  oxpipe.c  oxserver00.c  oxweave.c  oxweave.test  oxweaveUsage.h  sample_kanlib.c  serversm.h  sm12ox100bin.sh  sm1stackmachine.c  t.asir  xtag.c
src/ox_gsl/: Makefile  Makefile.in  assert1.rr  assert2.rr  assert3.rr  assert4.rr  call_gsl.c  call_gsl.h  call_gsl_eigen.c  call_gsl_ode.c  call_gsl_sf.c  call_gsl_sf.h  configure  configure.in  ox_eval.c  ox_gsl.c  ox_gsl.h
src/ox_math/: Makefile.FreeBSD  Makefile.OSF1  Makefile.cygwin  Makefile.in  Makefile.linux  Makefile.solaris  bconv.c  config.guess  config.sub  configure  configure.in  install-sh  int.tm  make-configure  math2.tm  math2ox.c  mlo.c  mlo.h  mysocket.c  mysocket.h  ox.c  ox.h  oxtag.h  parse.c  parse.h  serv1.c  serv2.c  serv2.h  sm.c  sm.h  sm_ext.c  test1.c  test2.c  testclient.c  todo.txt
src/ox_ntl/: Makefile  Makefile.in  cmon.cpp  config.h.in  configure  configure.in  main.cpp  ntl.cpp  ntl.h  ntl.rr  ntlconv.cpp  oxserv.c  oxserv.h  oxstack.c  oxstack.h
src/ox_pari/: Makefile  Makefile.am  Makefile.in  configure  configure.ac  convert.c  make-configure  mysig.c  ox_pari.c  ox_pari.h  pari_ftab.c
src/ox_python/: Makefile.in  Makefile.mac  assert1.rr  assert2.rr  configure  configure.in  make-configure  mysig.h  ox_python.c  ox_python.h
src/ox_toolkit/: Libtool-ja.txt  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  bconv.c  bnf.oxweave  cmo.c  cmolen.c  configure  configure.in  dump.c  glib.c  gmp_fake.c  gmp_fake.h  ltconfig  ltmain.sh  make-configure  mathcap.c  mysocket.c  mysocket.h  ox.c  ox.h  ox_X.asir  ox_Xsample.c  ox_toolkit.h  ox_toolkit_tags.h  oxf.c  oxf_old.c  oxtag.h  parse.c  parse.h  print.c  sample1.c  sample2.c  sample3.c  sample4.c  sample5.c  testclient.c  (+3 more)
src/oxc/: Makefile.in  configure  configure.in  make-configure  oxc.c  oxc.tex  sm.c  sm.h  sm_ext.c
src/oxmgraph/: Makefile.in  Makefile.vc  configure  configure.in  graph.c  windows-ja.txt
(+2911 files in other folders)
