dnl  $OpenXM: OpenXM/src/asir-contrib/configure.in,v 1.1 2004/07/02 07:48:47 takayama Exp $
dnl  If you change this file, do not forget to run autoconf and rm .configure_done

AC_INIT
AC_PREREQ(2.61)
AC_PROG_LN_S

OpenXM_ROOT=`cd ../..; pwd`
AC_SUBST([OpenXM_ROOT])

AC_CONFIG_FILES([Makefile packages/src/Makefile])
AC_OUTPUT
