dnl  $OpenXM: OpenXM/src/asir-doc/configure.in,v 1.4 2009/02/23 06:56:47 ohara Exp $
dnl  If you change this file, do not forget to run autoconf and rm .configure_done

AC_INIT
AC_PREREQ(2.61)
AC_PROG_CC

AC_PATH_PROGS([MAKEINFO],[jmakeinfo makeinfo])
AC_SUBST([MAKEINFO])
AC_PATH_PROGS([DVIPDF],[dvipdfmx dvipdfm divpdf])
AC_SUBST([DVIPDF])
AC_PATH_PROG([PTEX],[ptex])
if ${PTEX} -kanji=utf8 -version; then
   PTEX="${PTEX} -kanji=utf8"
fi
AC_SUBST([PTEX])

OpenXM_HOME=`cd ../..; pwd`
AC_SUBST([OpenXM_HOME])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
