dnl  $OpenXM: OpenXM/src/asir-doc/configure.in,v 1.5 2017/03/30 05:36:04 takayama Exp $
dnl  If you change this file, do not forget to run autoconf and rm .configure_done

AC_INIT
AC_PREREQ(2.61)
AC_PROG_CC

AC_PATH_PROGS([MAKEINFO],[jmakeinfo makeinfo])
AC_SUBST([MAKEINFO])
AC_PATH_PROG([PTEX],[xetex])
AC_SUBST([PTEX])
AC_PATH_PROG([TEX],[xetex])
AC_SUBST([TEX])

OpenXM_HOME=`cd ../..; pwd`
AC_SUBST([OpenXM_HOME])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
