dnl  $OpenXM: OpenXM/src/kxx/configure.in,v 1.6 2006/10/05 21:14:24 takayama Exp $
dnl  If you change this file, do not forget to run autoconf and rm .configure_done


AC_INIT(oxmain.c)
AC_PROG_CC
AC_PROG_RANLIB

AC_CHECK_FUNC(socket)
if test "$ac_cv_func_socket" = no ; then
  AC_CHECK_LIB(socket,socket)
fi
AC_CHECK_FUNC(gethostbyname)
if test "$ac_cv_func_gethostbyname" = no ; then
  AC_CHECK_LIB(nsl,gethostbyname)
fi
AC_CHECK_FUNC(dlopen)
if test "$ac_cv_func_dlopen" = no ; then
  AC_CHECK_LIB(dl,dlopen)
fi

AC_CHECK_HEADER(sys/appleapiopts.h,AC_SUBST(CFLAG2,[" -arch ppc -arch i386"]),AC_SUBST(CFLAG2,[" "]))
AC_CHECK_HEADER(sys/appleapiopts.h,AC_SUBST(CFLAG2p,[" -arch ppc -arch i386 -isysroot /Developer/SDKs/MacOSX10.4u.sdk "]),AC_SUBST(CFLAG2p,[" "]))


AC_OUTPUT(Makefile)
