dnl $OpenXM: OpenXM/src/ox_gsl/configure.in,v 1.3 2018/04/07 04:39:20 ohara Exp $

AC_INIT
AC_PREREQ(2.61)
AC_CANONICAL_TARGET

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PATH_XTRA

TARGET=ox_gsl
case "${host}" in
*-apple-darwin*)
    LIBS="-L../../lib -L/usr/local/lib -lgsl  -lcblas -lox  -lmpfr -lgmp -lgc"
    CFLAGS="${CPPFLAGS} -Wno-attributes -I../../include -I /usr/local/include"
    ;;
*)
#   LIBS="-L../../lib -L/usr/local/lib -L/usr/local/lib/gcc49 -Wl,-rpath=/usr/local/lib/gcc49  -lgsl -lcblas -lblas -lm -lox  -lmpfr -lgmp -lgc"
    LIBS_GCC="-L/usr/local/lib -L/usr/local/lib/gcc49 -Wl,-rpath=/usr/local/lib/gcc49"
    LIBS_GSL=`gsl-config --libs`
    LIBS_OX="-L../../lib -lox -lmpfr -lgmp -lgc"
    LIBS="${LIBS_GCC} ${LIBS_GSL} ${LIBS_OX}"
#   CFLAGS="${CPPFLAGS} -Wno-attributes -I../../include -I /usr/local/include"
    CFLAGS_GSL=`gsl-config --cflags`
    CFLAGS="${CPPFLAGS} -Wno-attributes -I../../include -I /usr/local/include ${CFLAGS_GSL}"
    ;;
esac

AC_SUBST([TARGET])
AC_SUBST([LIBS])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
