dnl  $OpenXM: OpenXM/src/ox_math/configure.in,v 1.2 2000/03/13 06:27:48 ohara Exp $
dnl  If you change this file, do not forget to run autoconf and rm .configure_done

AC_INIT(math2ox.c)
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PATH_XTRA

AC_ARG_WITH([gmp],
[  --with-gmp              with the GNU MP library [[no]]],
[with_gmp=yes],[with_gmp=no])

if test ${with_gmp:=no} != no ; then
    AC_DEFINE([WITH_GMP])
    GMPLIB="-lgmp"
fi
AC_SUBST([GMPLIB])

dnl for Solaris 2.x
AC_CHECK_FUNC(socket, , [AC_CHECK_LIB(socket,socket)])
AC_CHECK_FUNC(gethostbyname, , [AC_CHECK_LIB(nsl,gethostbyname)])

AC_CANONICAL_SYSTEM
case "$host_os" in
linux*|freebsd*)
	ml_system=Linux
	static_link_flags=-static
	;;
osf)
	ml_system=DEC-AXP
	static_link_flags=
	;;
solaris2*)
	ml_system=Solaris
	static_link_flags=
	;;
*)
	static_link_flags=
	;;
esac
AC_SUBST(ml_system)
AC_SUBST(static_link_flags)

AC_OUTPUT(Makefile)
