dnl  $OpenXM: OpenXM/src/ox_math/configure.in,v 1.3 2003/03/23 21:56:11 ohara Exp $
dnl  If you change this file, do not forget to run autoconf and rm .configure_done

AC_INIT(math2ox.c)
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PATH_XTRA

dnl for Solaris 2.x
AC_CHECK_FUNC(socket, , [AC_CHECK_LIB(socket,socket)])
AC_CHECK_FUNC(gethostbyname, , [AC_CHECK_LIB(nsl,gethostbyname)])

AC_CANONICAL_SYSTEM
case "$host" in
x86_64-*-linux*)
	ml_system=Linux-x86-64
	static_link_flags=-static
	;;
dnl linux*|freebsd*)
dnl 	ml_system=Linux
dnl 	static_link_flags=-static
dnl 	;;
osf)
	ml_system=DEC-AXP
	static_link_flags=
	;;
solaris2*)
	ml_system=Solaris
	static_link_flags=
	;;
*)
	static_link_flags=
	;;
esac
AC_SUBST(ml_system)
AC_SUBST(static_link_flags)

AC_OUTPUT(Makefile)
