dnl $OpenXM$
dnl  If you change this file, do not forget to run autoheader and autoconf


AC_INIT(main.cpp)
AC_CONFIG_HEADER([config.h])

AH_TOP()
AH_BOTTOM()

dnl debug option
AC_MSG_CHECKING(if --enable-debug option secified)
AC_ARG_ENABLE(debug, [  --enable-debug  Build a debugging version], [
	AC_MSG_RESULT(yes)
	AC_DEFINE(DEBUG, 1, Debug mode)
	OPTFLAG=${OPTFLAG-"-g"}
],
[
	AC_MSG_RESULT(no)
])
AC_SUBST(OPTFLAG)


dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
if test x$CC = xgcc; then
	CFLAGS="-Wall $CFLAGS"
fi
if test x$CXX = xg++; then
	CXXFLAGS="-Wall $CXXFLAGS"
fi


dnl Checks for libraries.

dnl -lgc, -lgmp, -lntl -lox exist $OpenXM_HOME/lib 
dnl FIXME: Replace `main' with a function in `-lxxx':
dnl AC_CHECK_LIB([xxx], [main])


dnl Checks for header files.
AC_HEADER_STDC


dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST


dnl Checks for library functions.

AC_TYPE_SIGNAL

AC_CHECK_FUNC(socket)
if test "$ac_cv_func_socket" = no ; then
	AC_CHECK_LIB(socket, socket)
fi
AC_CHECK_FUNC(gethostbyname)
if test "$ac_cv_func_gethostbyname" = no ; then
	AC_CHECK_LIB(nsl, gethostbyname)
fi
AC_CHECK_FUNC(dlopen)
if test "$ac_cv_func_dlopen" = no; then
	AC_CHECK_LIB(dl, dlopen)
fi

AC_OUTPUT(Makefile)



