dnl $OpenXM: OpenXM/src/ox_python/configure.in,v 1.3 2022/01/03 05:11:15 takayama Exp $

AC_INIT
AC_PREREQ(2.61)
AC_CANONICAL_TARGET

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PATH_XTRA


TARGET=ox_python
case "${host}" in
*-apple-darwin*)
    LIBS="-L../../lib -L/usr/local/lib  -lox -lmpfr -lgmp -lgc"
    CFLAGS="${CPPFLAGS} -Wno-attributes -I../../include -I /usr/local/include"
    ;;
*-linux-gnu*)
    LIBS_GCC=" "
    LIBS_OX="-L../../lib -lox -lmpfr -lgmp -lgc"
    LIBS="${LIBS_GCC} ${LIBS_OX}"
    CFLAGS="${CPPFLAGS} -Wno-attributes -I../../include -I /usr/local/include "
    ;;
*)
    LIBS_GCC="-L/usr/local/lib -L/usr/local/lib/gcc49 -Wl,-rpath=/usr/local/lib/gcc49"
    LIBS_OX="-L../../lib -lox -lmpfr -lgmp -lgc"
    LIBS="${LIBS_GCC} ${LIBS_OX}"
    CFLAGS="${CPPFLAGS} -Wno-attributes -I../../include -I /usr/local/include "
    ;;
esac

LIB_CONFIG=""
python3-config --embed
case "$?" in
0) 
   LIB_CONFIG="python3-config --ldflags --embed" 
   ;;
*)
   LIB_CONFIG="python3-config --ldflags"
   ;;
esac
AC_SUBST([LIB_CONFIG])
    
AC_SUBST([TARGET])
AC_SUBST([LIBS])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
