dnl  $OpenXM: OpenXM/src/ox_toolkit/configure.in,v 1.10 2004/06/28 12:39:11 ohara Exp $
dnl  If you change this file, do not forget to run autoconf and rm .configure_done

AC_INIT(mysocket.c)
AC_PREREQ(2.53)
AM_INIT_AUTOMAKE(ox_toolkit, 20040628)
AM_MAINTAINER_MODE
AC_CANONICAL_SYSTEM
AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LIBTOOL
AC_PATH_XTRA

if test "${ac_test_CFLAGS}" != set -a "${GCC}" = yes ; then
    CFLAGS="${CFLAGS} -finline-functions"
fi

case "${host}" in
[i[3-6]86-*-interix*])
    AC_DEFINE([_ALL_SOURCE])
    ;;
*)
    ;;
esac

dnl for Solaris 2.x
AC_CHECK_FUNC(socket, , [AC_CHECK_LIB(socket,socket)])
AC_CHECK_FUNC(gethostbyname, , [AC_CHECK_LIB(nsl,gethostbyname)])
dnl for Redhat 8.0
AC_CHECK_FUNC(dlopen, , [AC_CHECK_LIB(dl,dlopen)])

AC_OUTPUT(Makefile)
