dnl  $OpenXM: OpenXM/src/ox_toolkit/configure.in,v 1.13 2015/08/05 00:59:05 noro Exp $
dnl  If you change this file, do not forget to run autoconf and rm .configure_done

AC_INIT(ox_toolkit,20150825)
AC_CONFIG_SRCDIR([mysocket.c])
AC_PREREQ(2.69)
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_PATH_XTRA

if test "${ac_test_CFLAGS}" != set -a "${GCC}" = yes ; then
    CFLAGS="${CFLAGS} -finline-functions"
fi

case "${host}" in
[i[3-6]86-*-interix*])
    AC_DEFINE([_ALL_SOURCE])
    ;;
*)
    ;;
esac

dnl for Solaris 2.x
AC_CHECK_FUNC(socket, , [AC_CHECK_LIB(socket,socket)])
AC_CHECK_FUNC(gethostbyname, , [AC_CHECK_LIB(nsl,gethostbyname)])
dnl for Redhat 8.0
AC_CHECK_FUNC(dlopen, , [AC_CHECK_LIB(dl,dlopen)])

AC_CHECK_SIZEOF(long)
AC_OUTPUT(Makefile)
