dnl  $OpenXM: OpenXM/src/oxc/configure.in,v 1.1 2000/10/13 06:05:11 ohara Exp $
dnl  If you change this file, do not forget to run autoconf and rm .configure_done

AC_INIT(oxc.c)
AC_PROG_CC
AC_PATH_XTRA

AC_CHECK_FUNC(socket)
if test "$ac_cv_func_socket" = no ; then
  AC_CHECK_LIB(socket,socket)
fi
AC_CHECK_FUNC(gethostbyname)
if test "$ac_cv_func_gethostbyname" = no ; then
  AC_CHECK_LIB(nsl,gethostbyname)
fi
AC_CHECK_FUNC(dlopen)
if test "$ac_cv_func_dlopen" = no ; then
  AC_CHECK_LIB(dl,dlopen)
fi

AC_OUTPUT(Makefile)
