dnl  $OpenXM: OpenXM/src/oxc/configure.in,v 1.3 2004/12/06 14:25:47 ohara Exp $
dnl  If you change this file, do not forget to run autoconf and rm .configure_done

AC_INIT(oxc,1.0)
AC_CONFIG_SRCDIR([oxc.c])
AC_PREREQ(2.69)

AC_PROG_CC
AC_PROG_INSTALL

AC_ARG_ENABLE([shared],
[  --enable-shared         enable linking with shared libraries.  [[yes]]],
[],[enable_shared=yes])

if test "${enable_shared:=yes}" != no ; then
   true
fi

OXLIBS='-lox -lmpfr -lgmp -lgc'
if test "${enable_shared}" = no ; then
    OXLIBS='${libdir}/libox.a ${libdir}/libmpfr.a ${libdir}/libgmp.a ${libdir}/libgc.a'
fi
AC_SUBST([OXLIBS])

dnl AC_CHECK_FUNC(socket)
dnl if test "$ac_cv_func_socket" = no ; then
dnl   AC_CHECK_LIB(socket,socket)
dnl fi
dnl AC_CHECK_FUNC(gethostbyname)
dnl if test "$ac_cv_func_gethostbyname" = no ; then
dnl   AC_CHECK_LIB(nsl,gethostbyname)
dnl fi
dnl AC_CHECK_FUNC(dlopen)
dnl if test "$ac_cv_func_dlopen" = no ; then
dnl   AC_CHECK_LIB(dl,dlopen)
dnl fi

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
