dnl  If you change this file, do not forget to run autoconf and rm .configure_done

AC_INIT
AC_PREREQ(2.61)
AC_CANONICAL_TARGET

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PATH_XTRA

TARGET=oxmgraph
case "${host}" in
*-apple-darwin*)
    LIBS="-framework GLUT -framework OpenGL"
    ;;
*)
    LDFLAGS="$LDFLAGS -L/usr/local/lib"
    CPPFLAGS="${CPPFLAGS} -I /usr/local/include"
    AC_CHECK_HEADER(GL/glut.h, [], [TARGET=""])
    AC_CHECK_LIB([m], [cos])
    AC_CHECK_LIB([OpenGL], [glBegin])
    AC_CHECK_LIB([GLU], [gluPerspective])
    AC_CHECK_LIB([glut], [glutInit])
    ;;
esac

AC_SUBST([TARGET])
AC_SUBST([LIBS])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
