dnl  $OpenXM: OpenXM/src/kan96xx/Kan/configure.in,v 1.3 2007/02/19 06:57:14 takayama Exp $
dnl  If you change this file, do not forget to run autoconf and rm .configure_done

AC_INIT(sm.c,1.1)
AC_PREREQ(2.72)
AC_CANONICAL_TARGET
AC_PROG_CC
AC_PROG_RANLIB

AC_CHECK_FUNC(socket)
if test "$ac_cv_func_socket" = no ; then
  AC_CHECK_LIB(socket,socket)
fi
AC_CHECK_FUNC(gethostbyname)
if test "$ac_cv_func_gethostbyname" = no ; then
  AC_CHECK_LIB(nsl,gethostbyname)
fi
AC_CHECK_FUNC(dlopen)
if test "$ac_cv_func_dlopen" = no ; then
  AC_CHECK_LIB(dl,dlopen)
fi

AC_CHECK_HEADER(sys/appleapiopts.h,AC_SUBST(CFLAG2,[" -arch ppc -arch i386"]),AC_SUBST(CFLAG2,[" "]))
AC_CHECK_HEADER(sys/appleapiopts.h,AC_SUBST(CFLAG2p,[" -arch ppc -arch i386 -isysroot /Developer/SDKs/MacOSX10.4u.sdk "]),AC_SUBST(CFLAG2p,[" "]))
AC_CHECK_HEADER(sys/appleapiopts.h,AC_SUBST(AR,["libtool"]),AC_SUBST(AR,["ar"]))

dnl check if it is MacOS X by heuristic. If so, use static link.
AC_PATH_PROG(MDUTIL,mdutil,none)
if test x"$MDUTIL" = x"none"; then
LIBS2='${LIBS2_SHARED}'
else
LIBS2='${LIBS2_STATIC}'
fi
AC_SUBST(LIBS2,[$LIBS2])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
